@@ -5,3 +5,5 @@ export JAVA_HOME=MAGPIEJAVAHOME
 export ZOO_LOG_DIR=ZOOKEEPERLOGDIR
 export ZOOCFGDIR=ZOOKEEPERCONFDIR
 
+export ZOOKEEPER_HOME=ZOOKEEPERHOME
+export MAGPIE_SCRIPTS_HOME=MAGPIESCRIPTSHOME
