@@ -68,21 +68,21 @@ then
     echo "*"
     if [ "${ZOOKEEPER_MODE}" == "setuponly" ]
     then
-	echo "* To start Zookeper, on each node"
-	echo "*   Set ZOOCFGDIR, such as ..."
+ 	echo "* To setup, you probably want to run:" 
+	echo "*   ${magpieremotecmd} ${ZOOKEEPER_MASTER_NODE}"
 	if echo $SHELL | grep -q csh
 	then
-	    echo "*   setenv ZOOCFGDIR \"${ZOOCFGDIR}\""
+	    echo "*   setenv ZOOCFGDIR \"${ZOOKEEPER_CONF_DIR}\""
 	else
-	    echo "*   export ZOOCFGDIR=\"${ZOOCFGDIR}\""
+	    echo "*   export ZOOCFGDIR=\"${ZOOKEEPER_CONF_DIR}\""
 	fi
-	echo "*   cd $ZOOKEEPER_HOME"
-	echo "*   bin/zkServer.sh start"
+	echo "*   cd $MAGPIE_SCRIPTS_HOME"
+	echo "*   bin/magpie-zookeeper.sh start"
 	echo "*" 
     fi
     echo "* To end/cleanup your session, kill the daemons via:"
     echo "*" 
-    echo "*   bin/zkServer.sh stop"
+    echo "*   ${MAGPIE_SCRIPTS_HOME}/bin/magpie-zookeeper.sh stop"
     echo "*" 
     echo "* Some additional environment variables you may sometimes wish to set"
     echo "*" 
@@ -185,7 +185,7 @@ then
     if [ "${HADOOP_MODE}" == "setuponly" ]
     then
 	echo "*" 
-	echo "* To setup, you probably want to run:" 
+ 	echo "* To setup, you probably want to run:" 
 	echo "*"
 	if [ "$HADOOP_FILESYSTEM_MODE" == "hdfs" ] \
 	    || [ "$HADOOP_FILESYSTEM_MODE" == "hdfsoverlustre" ] \
